feat: add frontend, fix: fix a lot of various problems with backend